# AI-Job-Hunter

./: .gitignore
backend/: .dockerignore  .gitignore  Dockerfile  main.py  pyproject.toml
backend/api/routes/: auth.py  dashboard.py  pipeline.py
backend/db/: database.py  models.py
backend/job_agent/: pipeline.py
backend/job_agent/tools/: account_manager.py  analytics.py  application_status_tracker.py  approval_handler.py  company_finder.py  cover_letter.py  credential_vault.py  email_finder.py  email_followup.py  email_reply_detector.py  email_sender.py  email_template_cache.py  email_validator.py  email_writer.py  file_attachment.py  form_filler.py  job_alert.py  job_deduplication.py  job_expiry_checker.py  job_matcher.py  job_scraper.py  logging_tool.py  notification_tool.py  portal_blacklist.py  portal_detector.py  proxy_rotation.py  rate_limiter.py  resume_parser.py  resume_scorer.py  resume_version.py  salary_filter.py  session_manager.py  skill_extractor.py  spam_guard.py  task_manager.py  user_preference_tool.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_add_user_profile_fields.py  0003_nullable_pending_job_id.py  0004_nullable_sent_email_job_id.py  0005_reply_tracking.py  0006_gmail_oauth.py
frontend/: .gitignore  next.config.js  package-lock.json  package.json
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/components/: GuideContent.tsx  JobCard.tsx  Navbar.tsx  PublicFooter.tsx  PublicHeader.tsx  StatusBadge.tsx
frontend/lib/: api.ts
(+16 files in other folders)
